--- a/package.json
+++ b/package.json
@@ -4,4 +4,11 @@
     "cheerio": "^1.0.0-rc.11",
     "express": "^4.18.1"
   }
+  
+  	"scripts": {
+		"start": "node index.js",
+		"start:dev": "nodemon index.js"
+	},
+  
+  
 }
